--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Organic</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="action_colorpicker">Color</string>
-    <string name="action_tilesize">Size</string>
-    <string name="action_brightness">Brightness</string>
+    <string name="app_name">OrganicPixel</string>
 
 </resources>
